# qmidictl

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.git  Makefile.in  README  README.cmake  TODO  configure.ac  qmidictl.1  qmidictl.fr.1  qmidictl.pro  qmidictl.spec.in
debian/: changelog  control  copyright  rules
rpm/: qmidictl.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  config.h.cmake  qmidictl.cpp  qmidictl.desktop  qmidictl.desktop.in  qmidictl.qrc  qmidictlAbout.h  qmidictlActionBar.cpp  qmidictlActionBar.h  qmidictlActionBarStyle.cpp  qmidictlActionBarStyle.h  qmidictlDialStyle.cpp  qmidictlDialStyle.h  qmidictlMainForm.cpp  qmidictlMainForm.h  qmidictlMainForm.ui  qmidictlMenuStyle.cpp  qmidictlMenuStyle.h  qmidictlMidiControl.cpp  qmidictlMidiControl.h  qmidictlMidiControlForm.cpp  qmidictlMidiControlForm.h  qmidictlMidiControlForm.ui  qmidictlMixerStrip.cpp  qmidictlMixerStrip.h  qmidictlMixerStrip.ui  qmidictlOptions.cpp  qmidictlOptions.h  qmidictlOptionsForm.cpp  qmidictlOptionsForm.h  qmidictlOptionsForm.ui  qmidictlUdpDevice.cpp  qmidictlUdpDevice.h  src.pri.in  src.pro
src/android/: AndroidManifest.xml  build.gradle
src/appdata/: org.rncbc.qmidictl.desktop  org.rncbc.qmidictl.metainfo.xml  org.rncbc.qmidictl.xml  qmidictl.appdata.xml
src/data/maemo/: qmidictl.xpm
src/images/: qmidictl.xcf
src/man1/: qmidictl.1  qmidictl.fr.1
